--- a/src/components/TableComponent/tableComponent.module.css
+++ b/src/components/TableComponent/tableComponent.module.css
@@ -1,3 +1,25 @@
+.tableControlsWrapper,
+.tableFooterControls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.entriesControl {
+  align-self: flex-start;
+}
+
+.tableSearchControl {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.tableSearchControl input {
+  height: 20px;
+  margin-left: 10px;
+}
+
 .table {
   width: 100%;
   margin: auto;
@@ -19,4 +41,8 @@
 
 .tr:hover {
   background-color: #f5f5f5;
+}
+
+.tableFooterControls {
+  margin-top: 10px;
 }
